Fix pending action alignment issue

--- a/projects/campus-cloud/src/app/containers/controlpanel/contact-trace/cases/details/components/case-view/case-view.component.scss
+++ b/projects/campus-cloud/src/app/containers/controlpanel/contact-trace/cases/details/components/case-view/case-view.component.scss
@@ -66,7 +66,10 @@ textarea {
 }
 
 .action-to-do-link {
-  color: #2096F3;
+  color: #2096f3;
   cursor: pointer;
 }
 
+.action-cell {
+  margin-top: 6px;
+}
